2018-04-24  Richard Frith-Macdonald <rfm@gnu.org>

	* configure: regenerate
	* NSObject.m: tiny cosmetic whitespace tidyup
	* NSThread.m: move declarations to avoid compiler warning

2018-04-23  Riccardo Mottola <rm@gnu.org>

	* Source/NSThread.m:
	Detect if platform is missing spin locks and provide an dummy
	implementation. Emit warning during compilation and runtime (in debug).

2018-04-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: ensure that the thread specific memory key is
	initialised before use.

2018-04-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSException.m: Improve -symbold method on platforms without
	backtrace support (list addresses with a message to say the symbols
	are not available).

2018-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLock.m: Using class_createInstance() to allocate locks
	seems to be causing memory issues and crashes somehow.  Temporarily
	comment out that code to try to get things working again.

2018-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m:
	* Source/NSArray.m:
	* Source/NSCharacterSet.m:
	* Source/NSString.m:
	Use pthread mutex directly to try to avoid initialising NSLock too
	early on during process startup.

2018-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Don't set the name of trhe global lock until
	after we have make sure that strings and autorlrease are set up.

2018-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m:
	* Source/GSHTTPAuthentication.m:
	* Source/GSHTTPURLHandle.m:
	* Source/GSMDNSNetServices.m:
	* Source/GSURLPrivate.h:
	* Source/NSCalendar.m:
	* Source/NSCharacterSet.m:
	* Source/NSConnection.m:
	* Source/NSCountedSet.m:
	* Source/NSIndexPath.m:
	* Source/NSKeyValueObserving.m:
	* Source/NSLocale.m:
	* Source/NSMessagePort.m:
	* Source/NSSocketPort.m:
	* Source/NSUserDefaults.m:
	* Source/NSValueTransformer.m:
	Replace the obsolete GSLazyLock code with standard NSLocks now that